# estudo-genai

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.aiox-core/: install-manifest.yaml
docs/: guia de uso.txt
docs/sdd/: README.md
modules/agents/: README.md  agent_runner.py  multi_agent.py  react_agent.py  simple_agent.py
modules/embeddings/: README.md  api_embedder.py  benchmark.py  embedder.py  local_embedder.py  similarity.py  visualizer.py
modules/evaluation/: README.md  agent_eval.py  rag_eval.py
modules/llm/: README.md  basic_completion.py  conversation_history.py  parameters.py  streaming_completion.py  system_prompts.py  vision.py
modules/mcp/: README.md
modules/prompt_engineering/: README.md  prompt_library.py
modules/rag/: README.md  chunker.py  document_loader.py  pipeline.py  query_expansion.py  reranker.py  retriever.py
modules/structured_output/: README.md  __init__.py  basic_structured.py  pydantic_output.py  tool_based_extraction.py  validation.py
modules/vector_store/: README.md  chroma_store.py  metadata_filtering.py  persistence.py  store_interface.py
notebooks/: 00_setup_and_hello.ipynb  01_llm_exploration.ipynb  02_rag_walkthrough.ipynb  03_mcp_demo.ipynb  04_agents_playground.ipynb  05_embeddings_lab.ipynb  06_vector_store_lab.ipynb  07_prompt_engineering.ipynb  08_evaluation_suite.ipynb
scripts/: __init__.py  ingest_docs.py  run_agent.py  run_eval.py  run_rag_query.py  setup_env.py
shared/: __init__.py  config.py  llm_client.py  llm_interface.py  logger.py  utils.py
tests/: conftest.py
tests/test_embeddings/: test_similarity.py
tests/test_eval/: test_string_metrics.py
tests/test_llm/: test_basic_completion.py  test_provider_selection.py
tests/test_rag/: test_chunker.py  test_document_loader.py
(+39 files in other folders)
